# GEANT4-CMake-Template

./: .gitignore  CMakeLists.txt  README.md
cmake/: AddInstallRPATHSupport.cmake  InstallBasicPackageFiles.cmake
docs/: CMakeLists.txt  conf.py
docs/pages/: about.dox
source/: CMakeLists.txt
source/exe/: CMakeLists.txt  main.cpp
source/lib/: CMakeLists.txt
source/lib/include/: ActionInitialization.h  DetectorConstruction.h  EventAction.h  PrimaryGeneratorAction.h  RunAction.h  SteppingAction.h
source/lib/src/: ActionInitialization.cpp  DetectorConstruction.cpp  EventAction.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  SteppingAction.cpp
test/: CMakeLists.txt
